fix: z-index

--- a/omoide/presentation/static/navigation.css
+++ b/omoide/presentation/static/navigation.css
@@ -7,7 +7,7 @@
     left: 0;
     height: 100%;
     width: 300px;
-    z-index: 4;
+    z-index: 6;
     background-color: #434343;
     overflow-x: hidden;
     transition: transform 0.25s ease;
@@ -38,7 +38,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 3;
+    z-index: 5;
     background-color: rgba(0, 0, 0, 0.75);
     display: none;
     transition: opacity 0.6s ease;
